# MakeCode-Arcade-Sprite-Generator

./: .dockerignore  .fallowrc.json  .gitignore  .railwayignore  CLAUDE.md  CONTEXT.md  Dockerfile  MIGRATION.md  QUICK_REFERENCE.md  README.md  RESTORATION_NOTICE.md  STUDY_GUIDE.md  dev.sh  docker-compose.yml  package-lock.json  package.json  render.yaml  setup.sh  start.sh  temp_config.py  test-color-utils.js  tsconfig.base.json
.claude/hooks/: fallow-gate.sh
.github/workflows/: claude-pr-review.yml  claude.yml  fallow.yml  test.yml
client/: .env.example  .gitignore  Dockerfile  FRONTEND_STYLE.md  build.ts  bunfig.toml  dev-server.ts  eslint.config.js  external-public.plugin.ts  happydom.ts  index.html  package-lock.json  package.json  serve.ts  tailwind.config.js  test-setup.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
client/public/: adBlockingRecovery.js  ads.txt  errorProtectionMessage.js  export-demo.webm  fabric-icons.css  site.webmanifest
client/src/: App.scss  App.test.tsx  App.tsx  base.css  env.d.ts  index.css  index.scss  main.tsx  tailwind-intellisense.css  (+1 more)
fixtures/: README.md
server/: .env.example  Dockerfile  Procfile  package.json  pyproject.toml  requirements.in  requirements.txt  start_server.sh  tsconfig.json
server/app/: __init__.py  database.py  main.py
server/app/core/: config.py
server/app/models/: enums.py  schemas.py  sprite.py
server/app/prompts/: openai_sprite_prompt.py  pixellab_sprite_prompt.py  sprite_prompt.py
server/app/routers/: ai.py  background_removal.py  convert.py  health.py  image_generation.py  moderation.py  sprites.py
server/app/services/: openai_services.py  pixellab_services.py
server/src/: app.test.ts  app.ts  config.test.ts  config.ts  index.test.ts  index.ts  moderation-logic.test.ts  moderation-logic.ts  openai.test.ts  openai.ts  pixellab.ts  prompt.test.ts  prompt.ts  rate-limit.test.ts  rate-limit.ts  size.test.ts  size.ts
shared/: README.md  package.json
(+500 files in other folders)
