[project]
name = "makecode-sprite-server"
version = "0.1.0"
description = "API server for MakeCode Arcade Sprite Generator"
authors = [
    {name = "Javier Tamayo",email = "javierj.tamayo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pixel (>=0.4.1,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=1.102.0,<2.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
