[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Tamayo",email = "javierj.tamayo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.100.0,<0.101.0)",
    "uvicorn[standard] (>=0.23.0,<0.24.0)",
    "pydantic (>=2.5.1,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=1.102.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pixellab (>=1.0.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^6.0.0"
mypy = "^1.5.1"

